--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,15 @@
 	flex-direction: column;
 	max-width: 960px;
 	margin: 0 auto;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 header {
 	background-color: #853333;
 	position: fixed;
 	width: 100%;
+	z-index: 2;
 }
 
 main {
@@ -68,6 +71,30 @@ footer .container {
 
 .theme-info {
 	color: #777777;
+}
+
+.admin-panel-block {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	margin-bottom: 20px;
+}
+
+.editorClassName {
+	padding: 20px;
+}
+
+.save-btn {
+	padding: 5px 10px;
+	border-radius: 4px;
+	border: none;
+	background-color: #9e3c3c;
+	color: #fff;
+}
+
+.save-btn:hover {
+	cursor: pointer;
+	background-color: #853333;
 }
 
 @media (max-width: 760px) {
